formulario de contacto agregado

--- a/internas/formulario.html
+++ b/internas/formulario.html
@@ -13,5 +13,15 @@
     <a href="contacto.html">contacto</a>
     <a href="formulario.html">Formulario</a>
     <a href="nosotros.html">Nosotros</a>
+
+    <form>
+        <label for="usuario">usuario</label>
+        <input type="text" placeholder="Ingresa tu usuario">
+
+        <label for="contraseña">ontraseña</label>
+        <input type="password">
+
+        <input type="submit" value="ingresar">
+    </form>
 </body>
 </html>
