--- a/internas/contacto.html
+++ b/internas/contacto.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>contacto</h1>
+    <h1>Contacto</h1>
     <a href="../index.html">Inicio</a>
     <a href="contacto.html">Contacto</a>
     <a href="formulario.html">Formulario</a>
