--- a/internas/formulario.html
+++ b/internas/formulario.html
@@ -15,10 +15,10 @@
     <a href="nosotros.html">Nosotros</a>
 
     <form>
-        <label for="usuario">usuario</label>
+        <label for="usuario">Usuario</label>
         <input type="text" placeholder="Ingresa tu usuario">
 
-        <label for="contraseña">ontraseña</label>
+        <label for="contraseña">Contraseña</label>
         <input type="password">
 
         <input type="submit" value="ingresar">
