--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Inicio</h1>
     <a href="index.html">Inicio</a>
     <a href="internas/contacto.html">Contacto</a>
     <a href="internas/formulario.html">Formulario</a>
     <a href="internas/nosotros.html">Nosotros</a>
+
+    
 </body>
 </html>
